[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.2"
thiserror = "1.0.30"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.2"
solana-sdk = "=1.8.2"
solana-validator = "=1.8.2"

[lib]
crate-type = ["cdylib", "lib"]
