[package]
name = "solana-escrow"
description = "Solana Escrow Program For SPL Tokens"
authors = ["Alexandru Nedelcu <nedelcu.alexandru@yahoo.com>"]
version = "0.1.0"
edition = "2018"
license = "WTFPL"
repository = "https://github.com/ciripel/escrow-program"
publish = false

[dependencies]
solana-program = "1.8.5"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[features]
test-bpf = []
no-entrypoint = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.8.5"
solana-sdk = "1.8.5"

[lib]
crate-type = ["cdylib", "lib"]
